<resources>
    <string name="app_name">Demo App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_demo_b">DemoBActivity</string>
    <string name="title_activity_demo_main">DemoMainActivity</string>
    <string name="title_home">首页</string>
    <string name="drawer_close">关闭</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">文件服务器地址:</string>
    <string name="host_default_value">192.168.1.11</string>
    <string name="drawer_open">打开</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome_to">欢迎来到这里&#8230;</string>
    <string name="load_data_succees">数据加载成功&#8230;</string>
    <string name="title_img">Image WH</string>
    <string name="btn_two">Button Two</string>
    <string name="btn_one">Button One</string>
    <string name="btn_three">Button Three</string>

    <string name="menu_new_views">控件+Demo</string>
    <string name="menu_custom_views">自定义控件</string>
    <string name="a_d_t_textinputlayout">TextInputLayout</string>
    <string name="title_activity_demo_custom_view">DemoCustomViewActivity</string>
    <string name="demo_menu_kind">全部分类</string>
    <string name="demo_menu_shop">全部商家</string>
    <string name="demo_menu_order">默认排序</string>
    <string name="s_hint_query">请输入要查询的期次</string>
    <string name="menu_db_demo">数据库</string>
    <string name="s_btn_init_data">初始化</string>
    <string name="s_btn_select_data">查询值</string>
    <string name="download_file">下载文件</string>
    <string name="download_single_thread">单线程下载</string>
    <string name="download_multi_thread">多线程下载</string>
    <string name="title_activity_recycler_view">RecyclerViewActivity</string>
    <string name="hint_query">请输入要查询的东东</string>
    <string name="list_view_filter">ListView数据过滤</string>
    <string name="title_activity_resume_test1">ResumeTest1Activity</string>
    <string name="set_value">set value</string>
    <string name="next_activity">next Activity</string>
    <string name="title_activity_resume_test2">ResumeTest2Activity</string>
    <string name="title_activity_volley">VolleyActivity</string>
    <string name="btn_get_pm_value">获取沈阳天气信息</string>
</resources>
