<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv"
        android:text="@string/hello_world"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/text_color"
        android:background="@color/text_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/view_divider"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:layout_below="@id/tv"
        android:layout_marginTop="3dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_one"
            android:layout_weight="1"
            android:textColor="@color/text_color"
            android:background="@drawable/btn_selector1"
            android:onClick="toLineChart" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_two"
            android:textColor="@color/text_color"
            android:onClick="toChart"
            android:background="@drawable/btn_selector3"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_three"
            android:textColor="@color/text_color"
            android:background="@drawable/btn_selector2"
            android:clickable="true" />
    </LinearLayout>

</RelativeLayout>
